<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/fondo3"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context=".Login.ViewController.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#17933030"

        android:backgroundTint="#CCFFFFFF"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"

            >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/password_login"
                android:inputType="textPassword" />


            <Switch
                android:id="@+id/swSave"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="monospace"


                android:text="@string/store_user_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:text="@string/login_login"
                app:backgroundTint="@color/orange_dragon_ball" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>