<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clFightFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".Home.ViewController.Fragments.FightFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFightHeroeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_dragon_ball"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="372dp"
            android:layout_height="324dp">


            <TextView
                android:id="@+id/tvFigterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/fight_fragment"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbFighterHitPoints"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/red_dragon_ball"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@color/green_dragon_ball"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFigterName"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="99dp" />

            <ImageView
                android:id="@+id/ivFighter"
                android:layout_width="296dp"
                android:layout_height="171dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pbFighterHitPoints"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/vSeparator"
                android:layout_width="300dp"
                android:layout_height="5dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivFighter"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="413dp" />


            <Button
                android:id="@+id/bnHeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_dragon_ball"
                android:fontFamily="monospace"
                android:tag="heal"
                android:text="@string/fight_heal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bnAtack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeparator" />

            <Button
                android:id="@+id/bnAtack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_dragon_ball"
                android:fontFamily="monospace"
                android:tag="attack"
                android:text="@string/fight_attack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bnHeal"
                app:layout_constraintTop_toBottomOf="@+id/vSeparator" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- FAB para volver atrás (ubicado en la parte inferior derecha) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/faTimesSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:src="@drawable/garrapata"
        app:backgroundTint="@color/orange_dragon_ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <!-- FAB para volver atrás (ubicado en la parte inferior izquierda) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/faBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:src="@drawable/atras"
        app:backgroundTint="@color/orange_dragon_ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="BACK" />



</androidx.constraintlayout.widget.ConstraintLayout>